Prevent horizontal scrollbar at page width of 1024 px.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1521 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -6,7 +6,7 @@ header, .content, footer {
 }
 .container {
     width: 960px;
-    padding: 0 30px;
+    padding: 0 10px;
     margin: 0 auto;
 }
 header h1 a {
